2006-02-13  Derek Price  <derek@ximbiot.com>

	* server.c (do_cvs_command): Skip server_cleanup in the child process.

	* sanity.sh (sshstdio-6): Rewrite using more portable sed script.

2006-02-02  Derek Price  <derek@ximbiot.com>

	* sanity.sh (sshstdio): Attempt to ignore spurious SSH output.

	* main.c (main), release.c (release), server.c (do_cvs_command): Always
	call the cleanup hooks before exit.

2006-02-01  Derek Price  <derek@ximbiot.com>

	* tag.c (add_to_val_tags): When a tag turns out to exist in the db when
	it isn't expected, release the lock.

	* history.c (save_user, save_file, save_mod, read_hrecs): Avoid
	overflow.

2006-01-30  Derek Price  <derek@ximbiot.com>

	* server.c (do_cvs_command): Set flow control pipe to blocking mode
	before waiting for it to close.
	(set_block_fd): New function.
	(Original patch from Garrett Rooney <grooney@collab.net>.)

2006-01-13  Larry Jones  <lawrence.jones@ugs.com>

	* mkmodules.c (config_contents): Change SystemAuth to yes to match
	the default value.  Add missing newline in RereadLogAfterVerify.

2006-01-09  Larry Jones  <lawrence.jones@ugs.com>

	* commit.c (remove_file): Record correct revision in history file.
	(Reported by Chris Reed <cr@progress.com>.)

2005-12-07  Derek Price  <derek@ximbiot.com>

	* client.c (start_server), root.c (method_names), root.h (CVSmethod):
	Handle :extssh: as a kindness to Eclipse users.
	(Suggestion from Joseph P. Skudlarek <Jskud@Jskud.com>.)

2005-12-06  Mark D. Baushke  <mdb@gnu.org>

	* buffer.c (stdio_buffer_shutdown): No longer assert() the
	fstat(). Use error (0, ...) instead of error (1, ...) to avoid
	infinite loops. (patch #4678)
	Patch adapted from "Allan L. Bazinet" <allan.bazinet@gmail.com>

2005-11-10  Larry Jones  <lawrence.jones@ugs.com>

	* commit.c (commit): Complain about obsolete -n option if not in
	server mode.

2005-11-09  Derek Price  <derek@ximbiot.com>

	* sanity.sh (pserver-4.2): Accept a "no such sytem user" message when
	a root attempt is made.
